# AbschlussProjekt_L_Hentschel_H_Kloepfer

./: LICENSE  README.md  ZZZ_Hilfe.txt  pyproject.toml  requirements.txt  webapp.py
pages/: 1_Tourdaten.py  2_Akkudaten.py
src/: figures.py  webapp.py
src/simulation/: GPS_data.py  battery_base.py  battery_pack.py  battery_simulation.py
src/tests/: Akkutest.py  BatterySimulation_test.py  CSV_test.py
