[project]
name = "AbschlussProjekt_L_Hentschel_H_Kloepfer"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Hannes",email = "hanneskloepfer2@gmail.com"},
]
dependencies = ["streamlit>=1.58.0", "pandas>=3.0.4", "numpy>=2.5.0", "matplotlib>=3.11.0"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
